--- a/homework/13.08.2025/html_files/index8.html
+++ b/homework/13.08.2025/html_files/index8.html
@@ -13,7 +13,7 @@
       }
       .item {
         width: 200px;
-        text-align: center2;
+        text-align: center;
         line-height: 1.4;
       }
 
