--- a/class_day/30.07.2025/somthing.html
+++ b/class_day/30.07.2025/somthing.html
@@ -6,7 +6,7 @@
     <title>test bootstrap</title>
     <!--Bootstrap-->
     <link rel="stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"<
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
   </head>
   <body>
     <div class="container">
