adding home work and class day

--- a/class_day/18.08.2025/bootstrap2.html
+++ b/class_day/18.08.2025/bootstrap2.html
@@ -11,33 +11,34 @@
       crossorigin="anonymous"
     />
     <style>
-      div {
-        margin: 10px;
-      }
-      form {
-        width: 30%;
+      .row > div {
+        background-color: lightblue;
       }
     </style>
   </head>
   <body>
-    <div>
-      <button class="btn btn-secondary">click me!</button>
-      <form>
-        <label for="firstname">first name:</label>
-        <input
-          type="text"
-          id="firstname"
-          class="form-control bg-light"
-          placeholder=" Enter your First name"
-        />
-        <label for="Last tname">first name:</label>
-        <input
-          type="text"
-          id="Last name"
-          class="form-control bg-light"
-          placeholder=" Enter your Last name"
-        />
-      </form>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla aut
+          porro odit adipisci rem architecto aliquid est voluptates, dolore
+          sint, illo numquam, nesciunt minima harum sit quas qui reiciendis
+          corporis.
+        </div>
+        <div class="col-md-4">
+          <div>
+           Lorem ipsum dolor sit amet, consectetur
+          adipisicing elit. Nulla aut porro odit adipisci rem architecto aliquid
+          est voluptates, dolore sint, illo numquam, nesciunt minima harum sit
+          quas qui reiciendis corporis.
+        </div>
+        <div>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla aut
+          porro odit adipisci rem architecto aliquid est voluptates, dolore
+          sint, illo numquam, nesciunt minima harum sit quas qui reiciendis
+          corporis.
+        </div>
+      </div>
     </div>
   </body>
 </html>
